--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ loader_version=0.16.5
 
 # Mod Properties
 mod_version=1.0.0
+mod_id=tinkerers_toolbox
 maven_group=org.rhm.tinkerers_toolbox
 archives_base_name=tinkerers_toolbox
 
