--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
@@ -16,3 +16,4 @@ archives_base_name=tinkerers_toolbox
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
+jei_version=19.10.0.126
