Remove existing translation file. Change Item Group translation key. Fix fabric generated entry in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # gradle
 
 .gradle/
+gradle/wrapper/gradle-wrapper.jar
 build/
 out/
 classes/
@@ -31,6 +32,7 @@ bin/
 # fabric
 
 run/
+src/main/generated/*
 
 # java
 
@@ -38,5 +40,3 @@ hs_err_*.log
 replay_*.log
 *.hprof
 *.jfr
-
-src/main/generated/
