--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,15 @@ repositories {
 		url = "https://maven.blamejared.com/"
 	}
 	maven {
-		name = "ModMaven"
+		name = "ModMaven" // JEI Fallback
 		url = "https://modmaven.dev"
+	}
+	maven {
+		name = "CurseMaven" // Jade
+		url "https://www.cursemaven.com"
+		content {
+			includeGroup "curse.maven"
+		}
 	}
 }
 
@@ -42,12 +49,15 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-
+	//Fabric API
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	//JEI
 	modCompileOnlyApi("mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}")
 	modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")
+
+	//Jade
+	modImplementation "curse.maven:jade-324717:${project.jade_version}"
 }
 
 processResources {
