--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ archives_base_name=tinkerers_toolbox
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
-jei_version=19.10.0.126
+jei_version=19.19.6.233
+#Jade 15.3.4
+jade_version=5706164
