--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,30 +8,28 @@ on: [ pull_request, push ]
 
 jobs:
     build:
-        strategy:
-            matrix:
-                # Use these Java versions
-                java: [
-                    21,    # Current Java LTS
-                ]
         runs-on: ubuntu-22.04
         steps:
             -   name: checkout repository
                 uses: actions/checkout@v4
             -   name: validate gradle wrapper
                 uses: gradle/wrapper-validation-action@v2
-            -   name: setup jdk ${{ matrix.java }}
+            -   name: setup jdk 21
                 uses: actions/setup-java@v4
                 with:
-                    java-version: ${{ matrix.java }}
+                    java-version: 21
                     distribution: 'microsoft'
             -   name: make gradle wrapper executable
                 run: chmod +x ./gradlew
             -   name: build
-                run: ./gradlew build
+                run: ./gradlew remapJar
             -   name: capture build artifacts
-                if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
                 uses: actions/upload-artifact@v4
                 with:
                     name: Artifacts
                     path: build/libs/
+            - uses: Shopify/upload-to-release@v1
+              with:
+                  name: latest
+                  path: build/libs/*.jar
+                  repo-token: ${{ secrets.GITHUB_TOKEN }}
