--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ on: [ pull_request, push ]
 
 jobs:
     build:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
         steps:
             -   name: checkout repository
                 uses: actions/checkout@v4
@@ -28,8 +30,9 @@ jobs:
                 with:
                     name: Artifacts
                     path: build/libs/
-            - uses: d1ceward/draft-assets-release-action@v2
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  files: |
-                      build/libs/*.jar
+            -   uses: ncipollo/release-action@v1
+                with:
+                    artifacts: build/libs/*.jar
+                    prerelease: true
+                    name: dev.${{ git rev-parse --short HEAD }}
+                    body: "Latest dev build. might be unstable, buggy or simply unfunctional."
