--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ dependencies {
 
     //JEI //TODO: fully implement
     modCompileOnlyApi("mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}")
-    modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")
+    //modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")
 
     //Jade
     modImplementation "curse.maven:jade-324717:${project.jade_version}"
