Separate base project and fabric project, to make adding forge, etc easier later.

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
-    id 'fabric-loom' version '1.7-SNAPSHOT'
     id "com.modrinth.minotaur" version "2.+"
 }
 
-version = project.mod_version
+group = project.maven_group
 
 tasks.register('buildInfo') {
     try {
@@ -25,96 +24,75 @@ tasks.register('buildInfo') {
         ext.buildNum = "dev.${ext.rev}"
     }
 }
-def artifact_version = "${mod_version}.${project.buildInfo.buildNum}"
+def artifact_version = "${project.mod_version}.${project.buildInfo.buildNum}"
 version = "${project.minecraft_version}-${artifact_version}"
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Version: ${version}"
 
-processResources {
-    inputs.property "mod_id", project.mod_id
-    inputs.property "mod_version", version
-    inputs.property "loader_version", project.loader_version
-    inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "fabric_version", project.fabric_version
+subprojects {
+    apply plugin: 'java'
 
-    filesMatching("fabric.mod.json") {
-        expand "mod_id": project.mod_id,
-            "mod_version": version,
-            "loader_version": project.loader_version,
-            "minecraft_version": project.minecraft_version,
-            "fabric_version": project.fabric_version
+    version = rootProject.version
+    group = rootProject.maven_group
+
+    repositories {
+        maven {
+            name = "Jared's maven" //JEI
+            url = "https://maven.blamejared.com/"
+        }
+        maven {
+            name = "ModMaven" // JEI Fallback
+            url = "https://modmaven.dev"
+        }
+        maven {
+            name = "CurseMaven" // Jade
+            url "https://www.cursemaven.com"
+            content {
+                includeGroup "curse.maven"
+            }
+        }
     }
-}
 
-group = project.maven_group
+    base {
+        archivesName = rootProject.archives_base_name
+    }
 
-base {
-    archivesName = project.archives_base_name
-}
+    processResources {
+        var expandProps = [
+            mod_id               : rootProject.mod_id,
+            mod_version          : version,
+            fabric_loader_version: rootProject.fabric_loader_version,
+            fabric_api_version   : rootProject.fabric_api_version,
+            minecraft_version    : rootProject.minecraft_version
+        ]
 
-loom {
-    splitEnvironmentSourceSets()
+        filesMatching("fabric.mod.json") {
+            expand expandProps
+        }
+        inputs.properties(expandProps)
+    }
 
-    mods {
-        "${project.mod_id}" {
-            sourceSet sourceSets.main
-            sourceSet sourceSets.client
+    tasks.withType(JavaCompile).configureEach {
+        it.options.release = 21
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+        withSourcesJar()
+
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+    }
+
+    jar {
+        from("LICENSE") {
+            rename { "${it}_${project.base.archivesName.get()}" }
         }
     }
 
 }
-
-fabricApi {
-    configureDataGeneration()
-}
-
-repositories {
-    maven {
-        name = "Jared's maven" //JEI
-        url = "https://maven.blamejared.com/"
-    }
-    maven {
-        name = "ModMaven" // JEI Fallback
-        url = "https://modmaven.dev"
-    }
-    maven {
-        name = "CurseMaven" // Jade
-        url "https://www.cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
-}
-
-dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    //Fabric API
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    //JEI //TODO: fully implement
-    modCompileOnlyApi("mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}")
-    //modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")
-
-    //Jade
-    modImplementation "curse.maven:jade-324717:${project.jade_version}"
-}
-
-tasks.withType(JavaCompile).configureEach {
-    it.options.release = 21
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-    withSourcesJar()
-
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
-}
-
+/*
 tasks.modrinth.dependsOn(tasks.modrinthSyncBody)
 modrinth {
     token = System.getenv("MODRINTH_TOKEN")
@@ -126,15 +104,10 @@ modrinth {
     gameVersions = ["1.21.1"]
     loaders = ["fabric", "quilt"]
     dependencies {
-        required.version "fabric-api", "${fabric_version}"
+        required.version "fabric-api", "${fabric_api_version}"
         optional.project "jade"
         optional.project "jei"
     }
     syncBodyFrom = rootProject.file("README.md").text
 }
-
-jar {
-    from("LICENSE") {
-        rename { "${it}_${project.base.archivesName.get()}" }
-    }
-}
+ */
