--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.5
+fabric_loader_version=0.16.5
 # Mod Properties
 mod_version=1.0.1
 mod_id=tinkerers_toolbox
 maven_group=org.rhm.tinkerers_toolbox
 archives_base_name=tinkerers_toolbox
 # Dependencies
-fabric_version=0.105.0+1.21.1
+fabric_api_version=0.105.0+1.21.1
 jei_version=19.19.6.233
 #Jade 15.3.4
 jade_version=5706164
